<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="UR_4_T2O_TCP" Id="{49b7f5ab-077e-4d20-a6eb-125b617a8956}">
    <Declaration><![CDATA[TYPE UR_4_T2O_TCP :
STRUCT
FLOAT0:ARRAY[0..3] OF BYTE;
FLOAT1:ARRAY[0..3] OF BYTE;
FLOAT2:ARRAY[0..3] OF BYTE;
FLOAT3:ARRAY[0..3] OF BYTE;
FLOAT4:ARRAY[0..3] OF BYTE;
FLOAT5:ARRAY[0..3] OF BYTE;
FLOAT6:ARRAY[0..3] OF BYTE;
FLOAT7:ARRAY[0..3] OF BYTE;
FLOAT8:ARRAY[0..3] OF BYTE;
FLOAT9:ARRAY[0..3] OF BYTE;
FLOAT10:ARRAY[0..3] OF BYTE;
FLOAT11:ARRAY[0..3] OF BYTE;
FLOAT12:ARRAY[0..3] OF BYTE;
FLOAT13:ARRAY[0..3] OF BYTE;
FLOAT14:ARRAY[0..3] OF BYTE;
FLOAT15:ARRAY[0..3] OF BYTE;
FLOAT16:ARRAY[0..3] OF BYTE;
FLOAT17:ARRAY[0..3] OF BYTE;
FLOAT18:ARRAY[0..3] OF BYTE;
END_STRUCT
END_TYPE


]]></Declaration>
  </DUT>
</TcPlcObject>