<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="Vision_const" Id="{cde48509-e620-481a-8a42-dd603d905dfa}" ParameterList="True">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	CX_VALUE:INT:=1;
	CY_VALUE:INT:=2;
	NUT_VALUE:INT:=3;
	HEAD_RIGTH_VALUE : INT:= 4;
	HEAD_LEFT_VALUE : INT:= 5;
	SEP_POS_VALUE: INT:= 6;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>