<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="wr_real_value" Id="{1f3c361e-5771-4ed8-a738-389b53318daf}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION wr_real_value : BOOL
VAR_INPUT
	function_state : INT;
	value : REAL;
END_VAR
VAR
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[wr_real_value := FALSE;

//#####################	WRITE VISION VARIABLES #################(PLC->ROBOT)
//write the CS.UR5 robot float register to send CX position
IF  function_state= VCts.CX_VALUE THEN
Robot_A.UR_inputs.Floats.FLOAT0 := flip_real(value);
Robot_A.UR_inputs.Floats.FLOAT1 := flip_real(value);
Robot_A.UR_inputs.Floats.FLOAT2 := flip_real(value);
wr_real_value := TRUE;
//write the CS.UR5 robot float register to send CY position
ELSIF  function_state= VCts.CY_VALUE THEN
Robot_A.UR_inputs.Floats.FLOAT3 := flip_real(value);
Robot_A.UR_inputs.Floats.FLOAT4 := flip_real(value);
Robot_A.UR_inputs.Floats.FLOAT5 := flip_real(value);
wr_real_value := TRUE;
//write the CS.UR5 robot float register to send NUT_TURN position
ELSIF  function_state= VCts.NUT_VALUE THEN
Robot_A.UR_inputs.Floats.FLOAT6 := flip_real(value);
Robot_A.UR_inputs.Floats.FLOAT7 := flip_real(value);
Robot_A.UR_inputs.Floats.FLOAT8 := flip_real(value);
wr_real_value := TRUE;
//write the CS.UR5 robot float register to send HEAD_RIGTH_VALUE position
ELSIF  function_state= VCts.HEAD_RIGTH_VALUE THEN
Robot_A.UR_inputs.Floats.FLOAT9 := flip_real(value);
Robot_A.UR_inputs.Floats.FLOAT10 := flip_real(value);
Robot_A.UR_inputs.Floats.FLOAT11 := flip_real(value);
wr_real_value := TRUE;
//write the CS.UR5 robot float register to send HEAD_LEFT_VALUE position
ELSIF  function_state = VCts.HEAD_LEFT_VALUE THEN
Robot_A.UR_inputs_2.Floats.FLOAT12 := flip_real(value);
Robot_A.UR_inputs_2.Floats.FLOAT13 := flip_real(value);
Robot_A.UR_inputs_2.Floats.FLOAT14:= flip_real(value);
wr_real_value := TRUE;
//write the CS.UR5 robot float register to send NUT_POS_VALUE position
ELSIF  function_state = VCts.SEP_POS_VALUE THEN
Robot_A.UR_inputs_2.Floats.FLOAT12 := flip_real(value);
Robot_A.UR_inputs_2.Floats.FLOAT13 := flip_real(value);
Robot_A.UR_inputs_2.Floats.FLOAT14:= flip_real(value);
wr_real_value := TRUE;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="wr_real_value">
      <LineId Id="95" Count="32" />
      <LineId Id="129" Count="4" />
      <LineId Id="128" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>